--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,15 +7,17 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:layout_gravity="center_vertical"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TextView
-            android:id="@+id/result_text"
+    <ImageView
+            android:id="@+id/dice_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:textSize="30sp"
-            android:text="roll me!"/>
+            app:srcCompat="@drawable/empty_dice"
+            tools:src="@drawable/dice_1"/>
     
     <Button
             android:id="@+id/roll_button"
@@ -24,11 +26,11 @@
             android:layout_gravity="center_horizontal"
             android:text="@string/roll_label" />
 
-    <Button
+<!--    <Button
             android:id="@+id/count_up"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="@string/count_up"/>
+            android:text="@string/count_up"/>-->
 
 </LinearLayout>
